unpackaged/main/default/objects/ServiceAppointment/fields/Asset_Tier__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tier__c</fullName>
    <label>Asset Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>