unpackaged/main/default/objects/ServiceAppointment/fields/Assigned_Service_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Service_Resource_ID__c</fullName>
    <label>Assigned Service Resource ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>