unpackaged/main/default/objects/ServiceAppointment/fields/Cannot_Complete_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Complete_End_Time__c</fullName>
    <label>Cannot Complete - End Time</label>
    <type>DateTime</type>
</CustomField>