unpackaged/main/default/objects/ServiceAppointment/fields/Close_Out_Notes__c.field-meta.xml
<CustomField>
    <fullName>Close_Out_Notes__c</fullName>
    <label>Close Out Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>