unpackaged/main/default/objects/ServiceAppointment/fields/Contractor_User__c.field-meta.xml
<CustomField>
    <fullName>Contractor_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>