unpackaged/main/default/objects/ServiceAppointment/fields/Don_t_Use__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Use__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Don&#39;t Use</label>
    <type>Checkbox</type>
</CustomField>