unpackaged/main/default/objects/ServiceAppointment/fields/Gantt_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Gantt_Scheduling__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Gantt Scheduling</label>
    <type>Checkbox</type>
</CustomField>