unpackaged/main/default/objects/ServiceAppointment/fields/Maintenance_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Plan_Number__c</fullName>
    <label>Maintenance Plan Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>