unpackaged/main/default/objects/ServiceAppointment/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <formula>if( Asset_Tier__c = &quot;A&quot;, 1, if( Asset_Tier__c = &quot;B&quot;, 5,10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>