unpackaged/main/default/objects/ServiceAppointment/fields/Scheduled_for_today__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_for_today__c</fullName>
    <formula>TODAY( ) =  DATEVALUE( SchedStartTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled for today</label>
    <type>Checkbox</type>
</CustomField>