unpackaged/main/default/objects/ServiceAppointment/fields/Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduler</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>