unpackaged/main/default/objects/ServiceAppointment/fields/Vendor_Update__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Update</label>
    <type>Checkbox</type>
</CustomField>