unpackaged/main/default/objects/ServiceAppointment/fields/Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Number__c</fullName>
    <label>Work Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>