unpackaged/main/default/objects/ServiceAppointment/fields/Work_Order_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Record_Type_Developer_Name__c</fullName>
    <label>Work Order Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>