unpackaged/main/default/objects/ServiceAppointment/fields/Work_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Text__c</fullName>
    <label>Work Type (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>