unpackaged/main/default/objects/ServiceAppointment/validationRules/Contractor_Contact_Must_Have_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Contractor_Contact_Must_Have_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Contractor__c)=FALSE,
ISBLANK(Contractor__r.Email)
)</errorConditionFormula>
    <errorDisplayField>Contractor__c</errorDisplayField>
    <errorMessage>The Contractor Contact you have selected does not have an email address. You must update that Contact with an email address prior to selecting them on a Service Appointment.</errorMessage>
</ValidationRule>