unpackaged/main/default/objects/ServiceAppointment/validationRules/Vendor_Editing_Rules_Other_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Editing_Rules_Other_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.ProfileId = &#39;00e3i000000dZcf&#39;,
OR(ISCHANGED( EarliestStartTime ),
ISCHANGED(  DueDate )
)
)</errorConditionFormula>
    <errorMessage>Oops! It doesn&#39;t look like you have access to edit these fields. If you need to complete the Service Appointment, please use the &#39;Complete Service Appointment&#39; button in the top right of the page. If you need anything else, please contact your Ensign rep.</errorMessage>
</ValidationRule>