unpackaged/main/default/objects/ServiceAppointment/validationRules/Vendor_Status_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Status_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.ProfileId = &#39;00e3i000000dZcf&#39;,
ISCHANGED(Status),
 Vendor_Update__c = FALSE)</errorConditionFormula>
    <errorMessage>Oops! Please update the status using the &#39;Complete Service Appointment&#39; button in the top right corner. If you have any questions, please reach out to your Ensign representative.</errorMessage>
</ValidationRule>