unpackaged/main/default/objects/ServiceAppointment/listViews/All_Service_Appointments.listView-meta.xml
<ListView>
    <fullName>All_Service_Appointments</fullName>
    <columns>Contractor_User__c</columns>
    <columns>LatestEndTime</columns>
    <columns>Work_Order_Number__c</columns>
    <columns>Name</columns>
    <columns>Description</columns>
    <columns>Status</columns>
    <columns>ActualStartTime</columns>
    <columns>ActualEndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contractor_User__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Service Appointments - Vendors</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>