unpackaged/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>Account</columns>
    <columns>Asset_Name__c</columns>
    <columns>Work_Order_Number__c</columns>
    <columns>Priority__c</columns>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Location__c</columns>
    <columns>LatestEndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Service Appointments</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>