unpackaged/main/default/objects/ServiceAppointment/listViews/Cannot_Complete.listView-meta.xml
<ListView>
    <fullName>Cannot_Complete</fullName>
    <columns>Name</columns>
    <columns>Close_Out_Notes__c</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Cannot Complete</value>
    </filters>
    <label>Cannot Complete</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>