unpackaged/main/default/objects/ServiceAppointment/listViews/Completed_Service_Appointments_Vendors.listView-meta.xml
<ListView>
    <fullName>Completed_Service_Appointments_Vendors</fullName>
    <columns>LatestEndTime</columns>
    <columns>Work_Order_Number__c</columns>
    <columns>Name</columns>
    <columns>Description</columns>
    <columns>Status</columns>
    <columns>ActualStartTime</columns>
    <columns>ActualEndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Service Appointments - Vendors</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>