unpackaged/main/default/objects/ServiceAppointment/listViews/Daily_Scheduled_SAs_Well_stops.listView-meta.xml
<ListView>
    <fullName>Daily_Scheduled_SAs_Well_stops</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Asset_Name__c</columns>
    <columns>Description</columns>
    <columns>SchedStartTime</columns>
    <columns>ActualStartTime</columns>
    <columns>ActualDuration</columns>
    <columns>Work_Order_Number__c</columns>
    <columns>WorkType</columns>
    <columns>DurationInMinutes</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Scheduled,Dispatched,In Progress,Completed,Cannot Complete</value>
    </filters>
    <filters>
        <field>WorkType</field>
        <operation>contains</operation>
        <value>Well Stop</value>
    </filters>
    <label>Daily Scheduled SAs( Well stops)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>