unpackaged/main/default/objects/ServiceAppointment/listViews/Frac_ond_Inspections.listView-meta.xml
<ListView>
    <fullName>Frac_ond_Inspections</fullName>
    <columns>Work_Order_Number__c</columns>
    <columns>Name</columns>
    <columns>Asset_Name__c</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>LatestEndTime</columns>
    <columns>SchedStartTime</columns>
    <columns>Maintenance_Plan_Number__c</columns>
    <columns>Close_Out_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Maintenance_Plan_Number__c</field>
        <operation>equals</operation>
        <value>MP-0258,MP-0259,MP-0260</value>
    </filters>
    <label>Frac pond Lines Inspections</label>
</ListView>