unpackaged/main/default/objects/ServiceAppointment/listViews/Open_Service_Appointments_Vendors.listView-meta.xml
<ListView>
    <fullName>Open_Service_Appointments_Vendors</fullName>
    <columns>CreatedDate</columns>
    <columns>Contractor_User__c</columns>
    <columns>Work_Order_Number__c</columns>
    <columns>Name</columns>
    <columns>Asset_Name__c</columns>
    <columns>Status</columns>
    <columns>Description</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New,Scheduled,Dispatched,In Progress</value>
    </filters>
    <filters>
        <field>Contractor_User__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>10/1/2022 12:00 AM</value>
    </filters>
    <label>Open Service Appointments - Vendors</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>