unpackaged/main/default/objects/ServiceAppointment/listViews/Overdue_SAs.listView-meta.xml
<ListView>
    <fullName>Overdue_SAs</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>LatestEndTime</columns>
    <columns>EarliestStartTime</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>LatestEndTime</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Overdue SAs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>