unpackaged/main/default/objects/ServiceAppointment/listViews/Overdue_Well_Stop_SAs.listView-meta.xml
<ListView>
    <fullName>Overdue_Well_Stop_SAs</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>LatestEndTime</columns>
    <columns>EarliestStartTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>LatestEndTime</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Work_Order_Record_Type_Developer_Name__c</field>
        <operation>contains</operation>
        <value>Well_Stop</value>
    </filters>
    <label>Overdue Well Stop SAs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>