unpackaged/main/default/objects/ServiceAppointment/listViews/Weekly_Maintenance_Scheduled_SAs.listView-meta.xml
<ListView>
    <fullName>Weekly_Maintenance_Scheduled_SAs</fullName>
    <columns>Work_Order_Number__c</columns>
    <columns>Name</columns>
    <columns>Asset_Name__c</columns>
    <columns>Primary__c</columns>
    <columns>Status</columns>
    <columns>Close_Out_Notes__c</columns>
    <columns>SchedStartTime</columns>
    <columns>ActualStartTime</columns>
    <columns>Description</columns>
    <columns>WorkType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Scheduled,Dispatched,In Progress,Completed,Cannot Complete</value>
    </filters>
    <filters>
        <field>WorkType</field>
        <operation>contains</operation>
        <value>Maintenance</value>
    </filters>
    <label>Weekly Maintenance Scheduled SAs</label>
</ListView>