unpackaged/main/default/objects/ServiceAppointment/listViews/Well_Stop_Optimization_Test.listView-meta.xml
<ListView>
    <fullName>Well_Stop_Optimization_Test</fullName>
    <columns>Work_Order_Number__c</columns>
    <columns>Name</columns>
    <columns>Asset_Name__c</columns>
    <columns>CreatedDate</columns>
    <columns>SchedStartTime</columns>
    <columns>Status</columns>
    <columns>Description</columns>
    <columns>WorkType</columns>
    <columns>FSL__Schedule_Mode__c</columns>
    <columns>Maintenance_Plan_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Scheduled,Dispatched,In Progress,Completed,Cannot Complete</value>
    </filters>
    <filters>
        <field>WorkType</field>
        <operation>contains</operation>
        <value>Well Stop</value>
    </filters>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Well Stop Optimization Test</label>
</ListView>